--- a/stat_analysis.Rmd
+++ b/stat_analysis.Rmd
@@ -2,13 +2,15 @@
 title: "stat_analysis"
 author: "Tin Satriawan"
 date: "31/01/2022"
-output: html_document
+output: 
+  word_document: 
+    reference_docx: "stat_analysis.docx"
 editor_options: 
+  
   chunk_output_type: console
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r setup, include = F}
 
 # data wrangling 
 source("data_wrangling.R")
@@ -37,12 +39,26 @@ library(dplyr)
 library(car)
 library(MASS)
 library(leaps)
+library(flextable)
 
+# set chunks defaults
+knitr::opts_chunk$set(
+  echo       = FALSE,
+  message    = FALSE,
+  warning    = FALSE
+)
+
+# set flextable defaults
+knitr::opts_chunk$set(echo = TRUE, fig.cap = TRUE)
+  set_flextable_defaults(
+  font.family = "Arial", font.size = 9, 
+  theme_fun = "theme_vanilla",
+  big.mark="", table.layout="autofit")
 
 ```
 
 
-```{r function}
+```{r functions, echo = F}
 
 # plot MLR assumptions diagnostics
 plot_diagnostics <- function(input, model, type = "co2gC"){
@@ -89,6 +105,49 @@ calc_model <- function(input, model, type = "co2gC"){
   # output$stdresid <- residuals(model)/sum$sigma
   output
 }
+
+## function for calculating yearly MLR 
+
+calc_yearly_MLR <- function(input, n_period, scope, type) {
+  
+  # filter input to get each period 
+  filtered_input <- as.data.frame(input) %>%
+             dplyr::filter(period == n_period) %>% 
+             dplyr::select(-c(date, period))
+  model.null <- eval(parse(text = paste0("lm(", type, "~ 1, data = filtered_input)")))
+  model.step <- stepAIC(model.null, 
+                        scope = scope, 
+                        trace = T) 
+  print(model.step)
+  
+  # AIC result 
+  result <- model.step[["anova"]][-1, ]
+  
+  # get AIC, R2, adj R2 per variable added
+  result_per_variable <- data.frame(variable = NA, 
+                                    AIC = NA, 
+                                    R2 = NA,
+                                    adjR2 = NA)
+  
+  for(i in 1:nrow(result)){
+    if(i == 1) {
+      step <- NA
+      step <- paste0("~1", result$Step[i])
+    } else { 
+      step <- paste0(step, result$Step[i])
+      }
+    model <- eval(parse(text = paste0("lm(", type, step, ", data = filtered_input)")))
+    # print diagonstic plots
+    print(plot_diagnostics(filtered_input, model, type))
+    result_per_variable[i, "variable"] <- result$Step[i]
+    result_per_variable[i, "AIC"] <- result$AIC[i]
+    result_per_variable[i, "R2"] <- summary(model)[["r.squared"]]
+    result_per_variable[i, "adjR2"] <- summary(model)[["adj.r.squared"]]
+
+  }
+  result_per_variable
+  
+  }
 ```
 
 
@@ -99,7 +158,7 @@ calc_model <- function(input, model, type = "co2gC"){
 
 ## HOS approach
 
-```{r HOS approach for NEE using weekly data}
+```{r HOS approach for NEE using weekly data, include = F}
 
 ## select variables from the daily measurements averaged over 1 week
 weekly_nGF <- left_join(weekly.nGF, weekly.met) %>% 
@@ -264,6 +323,7 @@ Anova(model_2_sep, type = c("III"))
 
 
 ####-------------- PARTITIONING THE VARIATIONS --------------#### 
+
 est_2_single <- calc_model(weekly_nGF1, model_2)
 est_2_sep <- calc_model(input = weekly_nGF1, model_2_sep)
 
@@ -281,7 +341,8 @@ SSe <- sum((est_2_sep$observed - est_2_sep$yhat)^2)
 # interannual deviations of met variables = daily NEE - mean NEE each year
 
 est_2_sep <- est_2_sep %>% 
-  group_by(period) %>% 
+  mutate(week = lubridate::week(date)) %>%
+  group_by(week) %>% 
   mutate(yhat_mean_year = mean(yhat)) %>% 
   ungroup() %>% 
   mutate(yhat_mean = mean(yhat))
@@ -290,7 +351,9 @@ SSic <- sum((est_2_sep$yhat - est_2_sep$yhat_mean_year)^2)
 
 #### SSsc (SS of seasonal climatic variation)
 
-SSsc <- sum((est_2_sep$yhat_mean_year - est_2_sep$yhat_mean)^2)
+
+SSsc <- sum((unique(est_2_sep$yhat_mean_year) - 
+               est_2_sep$yhat_mean[1])^2)
 
 
 #### SSt (SS total) ####
@@ -299,7 +362,7 @@ SSt <- SSf + SSic + SSsc + SSe
 sum((est_2_sep$yhat - est_2_sep$yhat_mean)^2)
 
 
-# combine results 
+#### combine result ####
 
 # Percent contribution of each component to the interannual variability of NEE
 NEE_HOS <- data.frame(SSf = SSf/SSt * 100, 
@@ -308,16 +371,20 @@ NEE_HOS <- data.frame(SSf = SSf/SSt * 100,
                       SSe = SSe/SSt * 100)
 
 
+####-------------------- PLOTTING THE MODELS ------------------------------####
+
+plot_ly(data = est_2_sep, x = ~date, y = ~yhat, type = "scatter", mode = "lines", name = "separate lines model") %>%
+  add_trace(data = est_2_single, x = ~date, y = ~yhat, type = "scatter", mode = "lines", name = "single line model") %>%
+  add_trace(data = est_2_sep, x = ~date, y = ~observed, type = "scatter", mode = "markers", name = "observed")
+
+
+
 
 ```
 
-```{r NEE HOS result: plot & df}
+```{r NEE HOS result: plot & df, echo = F}
 
 #####-------------------- PLOTTING -----------------------#####
-
-plot_ly(data = est_2_sep, x = ~date, y = ~yhat, type = "scatter", mode = "lines", name = "separate lines model") %>% 
-  add_trace(data = est_2_single, x = ~date, y = ~yhat, type = "scatter", mode = "lines", name = "single line model") %>%
-  add_trace(data = est_2_sep, x = ~date, y = ~observed, type = "scatter", mode = "markers", name = "observed")
 
 
 NEE_HOS_weekly_plot <- ggplot() + 
@@ -340,12 +407,14 @@ ggsave("plots/NEE_HOS_weekly_plot.jpg")
 
 write.csv(NEE_HOS, "df/NEE_HOS_weekly.csv")
 
+NEE_HOS %>% flextable() 
+
 ```
 
 
 ## MLR for each year
 
-```{r NEE yearly MLR } 
+```{r NEE yearly MLR, include = F } 
 
 ## select variables from the daily measurements averaged over 1 week
 daily_nGF <- left_join(daily.nGF, BB_met) %>% 
@@ -365,48 +434,7 @@ daily_nGF1 <- daily_nGF %>%
 cor(daily_nGF1 %>% dplyr::select(-c(date, period)))
 
 
-## function for calculating yearly MLR 
 
-calc_yearly_MLR <- function(input, n_period, scope, type) {
-  
-  # filter input to get each period 
-  filtered_input <- as.data.frame(input) %>%
-             dplyr::filter(period == n_period) %>% 
-             dplyr::select(-c(date, period))
-  model.null <- eval(parse(text = paste0("lm(", type, "~ 1, data = filtered_input)")))
-  model.step <- stepAIC(model.null, 
-                        scope = scope, 
-                        trace = T) 
-  print(model.step)
-  
-  # AIC result 
-  result <- model.step[["anova"]][-1, ]
-  
-  # get AIC, R2, adj R2 per variable added
-  result_per_variable <- data.frame(variable = NA, 
-                                    AIC = NA, 
-                                    R2 = NA,
-                                    adjR2 = NA)
-  
-  for(i in 1:nrow(result)){
-    if(i == 1) {
-      step <- NA
-      step <- paste0("~1", result$Step[i])
-    } else { 
-      step <- paste0(step, result$Step[i])
-      }
-    model <- eval(parse(text = paste0("lm(", type, step, ", data = filtered_input)")))
-    # print diagonstic plots
-    print(plot_diagnostics(filtered_input, model, type))
-    result_per_variable[i, "variable"] <- result$Step[i]
-    result_per_variable[i, "AIC"] <- result$AIC[i]
-    result_per_variable[i, "R2"] <- summary(model)[["r.squared"]]
-    result_per_variable[i, "adjR2"] <- summary(model)[["adj.r.squared"]]
-
-  }
-  result_per_variable
-  
-  }
 
 # define the variables to be included in the model 
 scope <-  list(upper = ~TS.5 + RH + Precip + PA_2M + wtd + LE + ustar, 
@@ -429,8 +457,19 @@ for(i in 1: length(period)){
   }
 
 
+co2_MLR_yearly$variable <- substr(co2_MLR_yearly$variable,2, 5)
+
+write.csv(co2_MLR_yearly, "df/co2_MLR_yearly.csv")
 
 ```
+
+```{r NEE yearly MLR result: df, echo = F} 
+
+co2_MLR_yearly %>% flextable()
+
+```
+
+
 
 
 
@@ -438,7 +477,7 @@ for(i in 1: length(period)){
 # for CH4 
 
 ## HOS approach
-```{r HOS approach using weekly data}
+```{r HOS approach using weekly data, include = F}
 
 # select variables 
 weekly_nGF <- left_join(weekly.nGF, weekly.met) %>% 
@@ -637,6 +676,7 @@ Anova(model_2_sep, type = c("III"))
 
 
 ####-------------- PARTITIONING THE VARIATIONS --------------#### 
+
 est_2_single <- calc_model(weekly_nGF1, model_2, "ch4gC")
 est_2_sep <- calc_model(input = weekly_nGF1, model_2_sep, "ch4gC")
 
@@ -654,7 +694,8 @@ SSe <- sum((est_2_sep$observed - est_2_sep$yhat)^2)
 # interannual deviations of met variables = daily NEE - mean NEE each year
 
 est_2_sep <- est_2_sep %>% 
-  group_by(period) %>% 
+  mutate(week = lubridate::week(date)) %>%
+  group_by(week) %>% 
   mutate(yhat_mean_year = mean(yhat)) %>% 
   ungroup() %>% 
   mutate(yhat_mean = mean(yhat))
@@ -663,7 +704,9 @@ SSic <- sum((est_2_sep$yhat - est_2_sep$yhat_mean_year)^2)
 
 #### SSsc (SS of seasonal climatic variation)
 
-SSsc <- sum((est_2_sep$yhat_mean_year - est_2_sep$yhat_mean)^2)
+
+SSsc <- sum((unique(est_2_sep$yhat_mean_year) - 
+               est_2_sep$yhat_mean[1])^2)
 
 
 #### SSt (SS total) ####
@@ -672,7 +715,7 @@ SSt <- SSf + SSic + SSsc + SSe
 sum((est_2_sep$yhat - est_2_sep$yhat_mean)^2)
 
 
-# combine results 
+#### combine results ####
 
 # Percent contribution of each component to the interannual variability of NEE
 fCH4_HOS <- data.frame(SSf = SSf/SSt * 100, 
@@ -681,17 +724,19 @@ fCH4_HOS <- data.frame(SSf = SSf/SSt * 100,
                       SSe = SSe/SSt * 100)
 
 
-
-```
-
-```{r CH4 HOS result: plot & df}
-
 #####-------------------- PLOTTING -----------------------#####
 
 plot_ly(data = est_2_sep, x = ~date, y = ~yhat, type = "scatter", mode = "lines", name = "separate lines model") %>% 
   add_trace(data = est_2_single, x = ~date, y = ~yhat, type = "scatter", mode = "lines", name = "single line model") %>%
   add_trace(data = est_2_sep, x = ~date, y = ~observed, type = "scatter", mode = "markers", name = "observed")
 
+
+
+```
+
+```{r CH4 HOS result: plot & df, echo = F}
+
+#####-------------------- PLOTTING -----------------------#####
 
 fCH4_HOS_weekly_plot <- ggplot() + 
   geom_line(aes(x = est_2_sep$date, y = est_2_sep$yhat, linetype = "separate line model"), size = 0.7) + 
@@ -713,78 +758,42 @@ ggsave("plots/fCH4_HOS_weekly_plot.jpg")
 
 write.csv(fCH4_HOS, "df/fCH4_HOS_weekly.csv")
 
+fCH4_HOS %>% flextable()
+
 ```
 
 ## MLR for each year 
 
-# have to edit!!!
-```{r CH4 yearly MLR } 
+
+```{r CH4 yearly MLR, eval = F, include = F} 
 
 ## select variables from the daily measurements averaged over 1 week
-daily_nGF <- left_join(daily.nGF, BB_met) %>% 
-  left_join(weekly.GF) %>%
-  dplyr::select(c(date, ch4gC, co2gC, GPP_f_RF, TS.5, RH, PARin, 
+daily_nGF <- left_join(daily.nGF, BB_met) %>%
+  left_join(daily) %>%
+  dplyr::select(c(date, ch4gC, co2gC, GPP_f_RF, TS.5, RH, PARin,
                   VPD.y, Precip, PA_2M, Ta, wtd, LE, H, ustar)) %>%
   set_period() %>%
-  drop_na() 
+  drop_na()
 
-## transformation 
-daily_nGF1 <- daily_nGF %>%
-  mutate(co2gC = log(co2 + 1 - min(co2))^2,
-         TS.5 = (TS.5 + 1 - min(TS.5))^3,
-         LE = log(LE + 1 - min(LE))^(2),
-         wtd = exp(wtd + 1 - min(wtd))) %>%
-  dplyr::select(-c(Ta, VPD.y, H, PARin))  # remove due to multicollinearity
+## transformation
+daily_nGF1 <- daily_nGF %>%drop_na()%>%
+  mutate(ch4gC = (log10(ch4gC + 1 - min(ch4gC)))^0.6,
+         # co2gC = (exp(co2gC + 1 - min(co2gC)))^2,
+         GPP_f_RF = (GPP_f_RF + 1 - min(GPP_f_RF))^3, 
+         TS.5 = exp((TS.5 + 1 - min(TS.5)))^2,
+         Ta = (exp(Ta + 1 - min(Ta)))^2,
+         wtd = (exp(wtd + 1 - min(wtd)))^0.8,
+         LE = log10(LE + 1 - min(LE))^2,
+         H = (H + 1 - min(H))) %>%
+  dplyr::select(-c(PARin, VPD.y, co2gC, H, Ta)) # remove due to multicollinearity
 
-cor(daily_nGF1 %>% dplyr::select(-c(date, period)))
+cor(daily_nGF1%>% dplyr::select(-c(date, period)))
 
 
-## function for calculating yearly MLR 
-
-calc_yearly_MLR <- function(input, n_period, scope, type) {
-  
-  # filter input to get each period 
-  filtered_input <- as.data.frame(input) %>%
-             dplyr::filter(period == n_period) %>% 
-             dplyr::select(-c(date, period))
-  model.null <- eval(parse(text = paste0("lm(", type, "~ 1, data = filtered_input)")))
-  model.step <- stepAIC(model.null, 
-                        scope = scope, 
-                        trace = T) 
-  print(model.step)
-  
-  # AIC result 
-  result <- model.step[["anova"]][-1, ]
-  
-  # get AIC, R2, adj R2 per variable added
-  result_per_variable <- data.frame(variable = NA, 
-                                    AIC = NA, 
-                                    R2 = NA,
-                                    adjR2 = NA)
-  
-  for(i in 1:nrow(result)){
-    if(i == 1) {
-      step <- NA
-      step <- paste0("~1", result$Step[i])
-    } else { 
-      step <- paste0(step, result$Step[i])
-      }
-    model <- eval(parse(text = paste0("lm(", type, step, ", data = filtered_input)")))
-    # print diagonstic plots
-    print(plot_diagnostics(filtered_input, model, type))
-    result_per_variable[i, "variable"] <- result$Step[i]
-    result_per_variable[i, "AIC"] <- result$AIC[i]
-    result_per_variable[i, "R2"] <- summary(model)[["r.squared"]]
-    result_per_variable[i, "adjR2"] <- summary(model)[["adj.r.squared"]]
-
-  }
-  result_per_variable
-  
-  }
-
-# define the variables to be included in the model 
-scope <-  list(upper = ~TS.5 + RH + Precip + PA_2M + wtd + LE + ustar, 
-                                   lower = ~1)
+# define the variables to be included in the model
+scope <-  list(upper = ~GPP_f_RF + TS.5 + RH + 
+                       Precip + PA_2M + wtd + LE + ustar, 
+               lower = ~1)
 
 ##---------------- period 2015-2016 ---------------##
 
@@ -792,530 +801,29 @@ scope <-  list(upper = ~TS.5 + RH + Precip + PA_2M + wtd + LE + ustar,
 period <- unique(daily_nGF1$period)
 
 for(i in 1: length(period)){
-  if(i == 1){ 
-    co2_MLR_yearly <- calc_yearly_MLR(daily_nGF1, period[i], scope, "co2") %>% 
+  if(i == 1){
+    ch4_MLR_yearly <- calc_yearly_MLR(daily_nGF1, period[i], scope, "ch4gC") %>%
   mutate(period = period[i])
-  } else { 
-    co2_MLR_yearly <- rbind(co2_MLR_yearly, 
-                            calc_yearly_MLR(daily_nGF1, period[i], scope, "co2") %>% 
+  } else {
+    ch4_MLR_yearly <- rbind(ch4_MLR_yearly,
+                            calc_yearly_MLR(daily_nGF1, period[i], scope, "ch4gC") %>%
                               mutate(period = period[i]) )}
- 
+
   }
 
 
-
+ch4_MLR_yearly$variable <- substr(ch4_MLR_yearly$variable,2, 5)
+write.csv(ch4_MLR_yearly, "df/ch4_MLR_yearly.csv")
 ```
 
+```{r CH4 yearly MLR result: df, echo = F} 
+
+ch4_MLR_yearly %>% flextable()
+
+```
 
 
 
 
 
 # Others
-
-```{r CH4 HOS}
-
-data_CH4 <- left_join(daily.nGF, BB_met) %>% left_join(daily) %>%
-  dplyr::select(c(ch4gC, GPP_f_RF, TS.5, RH, PARin, VPD.y, Precip, PA_2M, Ta, wtd, SWC, LE, H, ustar))%>% 
-  drop_na() 
-# TS.10 and SWin are removed due to multicollinearity.
-
-
-## check data, transform if needed 
-windows()
-pairs(~ ch4gC + GPP_f_RF + TS.5 + RH + PARin + VPD.y + Precip + PA_2M + Ta + wtd + SWC + LE + H + ustar,
-      data = data_CH4,
-      main = "scatterplot matrix for mco2 ")
-
-#####---------- transformation ----------####
-
-data_CH4 <- left_join(daily.nGF, BB_met) %>% left_join(daily) %>%
-  dplyr::select(c(ch4gC, GPP_f_RF, TS.5, RH, PARin, VPD.y, Precip, PA_2M, Ta, wtd, SWC, LE, H, ustar))%>% 
-  drop_na() %>% 
-  mutate(log_ch4gC = log10(ch4gC + 1 - min(ch4gC)), 
-         exp_TS.5 = exp(TS.5)^0.4, 
-         exp_Ta = exp(Ta)^0.4,
-         log_wtd = log10(wtd + 1 - min(wtd)), 
-         log_H = log10(H + 1 - min(H)), 
-         exp_H = exp(H), 
-         log_ustar = log(ustar), 
-         ln_SWC = log(SWC))  
-
-## check data again
-windows()
-pairs(~ log_ch4gC + exp_TS.5 + RH + PARin + VPD.y + Precip + PA_2M + exp_Ta + log_wtd + SWC + LE + log_H + log_ustar,
-      data = data_CH4,
-      main = "scatterplot matrix for ch4gC ")
-
-
-#### model selection ### 
-ch4gC_subset <- regsubsets(ch4gC~., data = data_CH4, nbest = 3)
-s <- summary(ch4gC_subset)
-
-result_stat <- data.frame(s$which, s$rsq, s$adjr2, s$bic)
-
-# order results by decreasing adjr2
-result_stat[order(-result_stat$s.adjr2), ]
-
-# order results by increasing bic
-result_stat[order(result_stat$s.bic), ]
-
-
-#### try the first model (largest adj R2) ######
-model_1 <- lm(ch4gC ~ GPP_f_RF + RH + wtd + SWC + LE + H + ustar, data = data_CH4)
-sum_1 <- summary (model_1)
-sum_1 
-
-vif(model_1)
-
-plot_diagnostics(data_CH4, model_1, "ch4gC")
-shapiro.test(residuals(model_1))
-
-```
-
-```{r CO2: HOS TRY 1, eval = F }
-
-
-####---------------- MODEL SELECTION FOR SINGLE LINE MODEL -------------####
-
-
-data_nGF <- left_join(daily.nGF, BB_met) %>% 
-  dplyr::select(c(co2gC, ch4gC, date, TS.5, RH, PARin, VPD.y, Precip, PA_2M, Ta, wtd, SWC, LE, H, ustar, br))%>% 
-  drop_na() 
-# TS.10 and SWin are removed due to multicollinearity. SWC is removed due to bad data
-
-
-
-data_nGF1 <- data_nGF %>%
-  mutate(log_co2gC = log10(co2gC + 1 - min(co2gC)), 
-         exp_TS.5 = (exp(TS.5)^0.2), 
-         log_wtd = log10(wtd + 1 - min(wtd)), 
-         log_H = log10(H + 1 - min(H)), 
-         exp_H = exp(H), 
-         log_ustar = log(ustar), 
-         ln_SWC = log(SWC)) %>% 
-  dplyr::select(-c(ch4gC, date, co2gC)) 
-
-
-
-## check data again
-windows()
-pairs(~ log_co2gC + exp_TS.5 + log_wtd + H + log_ustar + ln_SWC + H + PARin + Ta,
-      data = data_nGF1,
-      main = "scatterplot matrix for mco2 ")
-
- 
-
-
-
-##### transformation #####
-
-
-
-data_nGF2 <- data_nGF %>%
-  mutate(co2gC = exp(co2gC)^0.3,
-         exp_TS.5 = (exp(TS.5)^0.3), 
-         log_wtd = log10(wtd + 1 - min(wtd)), 
-         ln_SWC = log(SWC)) %>% 
-  dplyr::select(-c(ch4gC, SWC, wtd, TS.5)) %>% 
-  set_period() 
-
-windows()
-pairs(~ co2gC +RH + PARin + VPD.y + Precip + PA_2M + Ta + LE + H + ustar + br + exp_TS.5 + log_wtd + ln_SWC,
-      data = data_nGF2,
-      main = "scatterplot matrix for mco2 ")
-
-# model selection
-co2gC_subset <- regsubsets(co2gC~., data = data_nGF2, nbest = 3)
-s <- summary(co2gC_subset)
-
-result_stat <- data.frame(s$which, s$rsq, s$adjr2, s$bic)
-
-# order results by decreasing adjr2
-result_stat[order(-result_stat$s.adjr2), ]
-
-# order results by increasing bic
-result_stat[order(result_stat$s.bic), ]
-
-
-
-#### try the first model (highest adj R2) #### 
-
-model_1 <- lm(co2gC ~ RH + VPD.y + Ta + H + ustar + exp_TS.5 + log_wtd + ln_SWC, data = data_nGF2) 
-sum_1 <- summary (model_1)
-sum_1 
-
-# R2 is 0.627 and p-value <0.05. Strangely TS.5 is not significant -> indicates multicollinearity
-# check for multicollinearity 
-vif(model_1)
-# VPD and Ta have VIF > 5, which is concerning
-
-cor(data_nGF2[, c("RH", "VPD.y", "Ta", "H", "ustar", "exp_TS.5", "log_wtd", "ln_SWC")])
-# Ts and Ta are strongly correlated
-# RH and VPD are strongly correlated
-
-# let's redo the model by excluding RH and TS.5
-model_1 <- lm(co2gC ~ VPD.y + H + ustar + Ta + log_wtd + ln_SWC, data = data_nGF2) 
-sum_1 <- summary (model_1)
-sum_1 
-
-plot(model_1)
-shapiro.test(residuals(model_1))
-
-# adj R2 is 0.6208
-
-
-
-#### try the second model (lowest BIC) ####
-model_2 <- lm(co2gC ~ Ta + H + log_wtd + ln_SWC, data = data_nGF2)
-sum_2 <- summary(model_2)
-sum_2 
-
-# check multicollinearity 
-vif(model_2)
-# nice! no multicollinearity
-
-plot(model_2)
-shapiro.test(residuals(model_2))
-
-# adj R2 is 0.618 
-
-plot_diagnostics(input = data_nGF2, model = model_2)
-
-
-
-
-####---------------- PARALLEL LINES MODEL ----------------####
-
-data_nGF2$period <- as.factor(data_nGF2$period)
-
-model_2_par <- lm(co2gC ~ Ta + H + log_wtd + ln_SWC + period, data = data_nGF2)
-sum_2_par <- summary(model_2_par)
-
-# check assumptions
-plot_diagnostics(data_nGF2, model_2_par)
-shapiro.test(residuals(model_2_par))
-
-anova(model_2, model_2_par)
-
-####---------------- SEPARATE LINES MODEL ---------------####
-
-model_2_sep <- lm(co2gC ~ (Ta + H + log_wtd + ln_SWC) * period, data = data_nGF2)
-sum_2_sep <- summary(model_2_sep)
-sum_2_sep
-
-
-plot_diagnostics(data_nGF2, model_2_sep)
-shapiro.test(residuals(model_2_sep))
-
-# joint test: 
-anova(model_2, model_2_sep)
-
-# is the slope significant? 
-anova(model_2_par, model_2_sep)
-
-Anova(model_2, type = c("III"))
-Anova(model_2_sep, type = c("III"))
-
-
-####-------------- PARTITIONING THE VARIATIONS --------------#### 
-est_2_single <- calc_model(data_nGF2, model_2)
-est_2_sep <- calc_model(input = data_nGF2, model_2_sep)
-
-#### SSf (sums of squares of deviation explained by the functional change) ####
-
-#  sum((estimated NEE separate lines model - estimated NEE single model)^2)
-SSf <- sum((est_2_sep$yhat - est_2_single$yhat)^2)
-
-
-#### SSe (SS of random error) ####
-SSe <- sum((est_2_sep$observed - est_2_sep$yhat)^2)
-
-#### SSic (SS of interannual climatic variability)
-
-# interannual deviations of met variables = daily NEE - mean NEE each year
-
-est_2_sep <- est_2_sep %>% 
-  group_by(period) %>% 
-  mutate(yhat_mean_year = mean(yhat)) %>% 
-  ungroup() %>% 
-  mutate(yhat_mean = mean(yhat))
-
-SSic <- sum((est_2_sep$yhat - est_2_sep$yhat_mean_year)^2)
-
-#### SSsc (SS of seasonal climatic variation)
-
-SSsc <- sum((est_2_sep$yhat_mean_year - est_2_sep$yhat_mean)^2)
-
-
-#### SSt (SS total) ####
-SSt <- SSf + SSic + SSsc + SSe
-
-sum((est_2_sep$yhat - est_2_sep$yhat_mean)^2)
-
-
-# combine results 
-
-# Percent contribution of each component to the interannual variability of NEE
-NEE_HOS <- data.frame(SSf = SSf/SSt * 100, 
-                      SSic = SSic/SSt * 100,
-                      SSsc = SSsc/SSt * 100,
-                      SSe = SSe/SSt * 100)
-
-
-
-#####-------------------- PLOTTING -----------------------#####
-
-plot_ly(data = est_2_sep, x = ~date, y = ~yhat, type = "scatter", mode = "lines", name = "separate lines model") %>% 
-  add_trace(data = est_2_single, x = ~date, y = ~yhat, type = "scatter", mode = "lines", name = "single line model") %>%
-  add_trace(data = est_2_sep, x = ~date, y = ~observed, type = "scatter", mode = "markers", name = "observed")
-
-
-ggplot() + 
-  geom_line(aes(x = est_2_sep$date, y = est_2_sep$yhat), col = "navy")
-
-####-------------- without wtd and swc ---------####
-
-model_3_sep <- lm(co2gC ~ (Ta + H) * period, data = data_nGF2)
-sum_3_sep <- summary(model_3_sep)
-sum_3_sep
-
-
-plot_diagnostics(data_nGF2, model_3_sep)
-shapiro.test(residuals(model_3_sep))
-
-model_3 <- lm(co2gC ~ (Ta + H), data = data_nGF2)
-anova(model_3, model_3_sep)
-
-```
-
-```{r CO2: HOS TRY 2, eval = F}
-
-
-####---------------- MODEL SELECTION FOR SINGLE LINE MODEL -------------####
-
-data_nGF <- left_join(daily.nGF, BB_met) %>% 
-  dplyr::select(c(date, co2gC, ch4gC, date, TS.5, RH, PARin, VPD.y, Precip, PA_2M, Ta, wtd, SWC, LE, H, ustar, br))%>% 
-  set_period %>%
-  drop_na() 
-
-# TS.10, Ta, and SWin are not included due to multicollinearity. SWC is removed due to bad data.
-cor(data_nGF[, c("Ta", "PARin", "VPD.y", "H")])
-
-pairs(co2gC~Ta + wtd + Ta,
-data = data_nGF,
-main = "scatterplot matrix for mco2 ")
-
-windows()
-pairs(data_nGF%>% dplyr::select(-c(date, period)),
-      data = data_nGF,
-      main = "scatterplot matrix for mco2 ")
-
-
-####----------- stepwise linear regression ----------------####
-# variable selection using AIC 
-model.null <- lm(co2gC ~ 1, data = data_nGF %>% dplyr::select(-c(date, period))) # no x variable, the null model
-model.full <- lm(co2gC ~ ., data = data_nGF %>% dplyr::select(-c(date, period))) # all x variables
-
-# Start with null model
-model.step <- stepAIC(model.null, 
-                      scope = list(upper = ~ wtd + RH  + 
-                                      Precip + PA_2M + 
-                                      LE + H + ustar + Ta, 
-                                   lower = ~1),
-                      trace = T)
-
-model_x <- lm(co2gC ~ H + Ta + wtd, data = data_nGF)
-shapiro.test(residuals(model_x))
-plot_diagnostics(data_nGF, model_x)
-vif(model_x)
-
-####----------- model selection ------------------#####
-
-# model selection
-co2gC_subset <- regsubsets(co2gC ~ wtd + RH  + 
-                                      Precip + PA_2M + 
-                                      LE + H + ustar + Ta, 
-                           data = data_nGF, nbest = 3)
-s <- summary(co2gC_subset)
-
-result_stat <- data.frame(s$which, s$rsq, s$adjr2, s$bic)
-
-# order results by decreasing adjr2
-result_stat[order(-result_stat$s.adjr2), ]
-
-# order results by increasing bic
-result_stat[order(result_stat$s.bic), ]
-
-
-
-#### try the first model (highest adj R2) #### 
-
-model_1 <- lm(co2gC ~ wtd + Precip + PA_2M + H + ustar + Ta, data = data_nGF) 
-sum_1 <- summary (model_1)
-sum_1 
-
-# check multicollinearity
-vif(model_1)
-# Ta, PARin, VPD, and H have VIF > 5, which is concerning
-
-plot_diagnostics(data_nGF, model_1)
-shapiro.test(residuals(model_1))
-
-#### try the first model (lowest BIC) #### 
-
-model_2 <- lm(co2gC ~ wtd + H + Ta, data = data_nGF) 
-sum_2 <- summary (model_2)
-sum_2 
-
-# check multicollinearity
-vif(model_2)
-
-plot_diagnostics(data_nGF, model_2)
-shapiro.test(residuals(model_2))
-
-
-####---------------- SEPARATE LINES MODEL ---------------####
-
-model_2_sep <- lm(co2gC ~ (wtd + H + Ta) * period, data = data_nGF)
-sum_2_sep <- summary(model_2_sep)
-sum_2_sep
-
-
-plot_diagnostics(data_nGF, model_2_sep)
-shapiro.test(residuals(model_2_sep))
-
-# joint test: 
-anova(model_2, model_2_sep)
-
-# is the slope significant? 
-anova(model_2_par, model_2_sep)
-
-Anova(model_2, type = c("III"))
-Anova(model_2_sep, type = c("III"))
-
-
-####-------------- PARTITIONING THE VARIATIONS --------------#### 
-est_2_single <- calc_model(data_nGF, model_2)
-est_2_sep <- calc_model(input = data_nGF, model_2_sep)
-
-#### SSf (sums of squares of deviation explained by the functional change) ####
-
-#  sum((estimated NEE separate lines model - estimated NEE single model)^2)
-SSf <- sum((est_2_sep$yhat - est_2_single$yhat)^2)
-
-
-#### SSe (SS of random error) ####
-SSe <- sum((est_2_sep$observed - est_2_sep$yhat)^2)
-
-#### SSic (SS of interannual climatic variability)
-
-# interannual deviations of met variables = daily NEE - mean NEE each year
-
-est_2_sep <- est_2_sep %>% 
-  group_by(period) %>% 
-  mutate(yhat_mean_year = mean(yhat)) %>% 
-  ungroup() %>% 
-  mutate(yhat_mean = mean(yhat))
-
-SSic <- sum((est_2_sep$yhat - est_2_sep$yhat_mean_year)^2)
-
-#### SSsc (SS of seasonal climatic variation)
-
-SSsc <- sum((est_2_sep$yhat_mean_year - est_2_sep$yhat_mean)^2)
-
-
-#### SSt (SS total) ####
-SSt <- SSf + SSic + SSsc + SSe
-
-sum((est_2_sep$yhat - est_2_sep$yhat_mean)^2)
-
-
-# combine results 
-
-# Percent contribution of each component to the interannual variability of NEE
-NEE_HOS <- data.frame(SSf = SSf/SSt * 100, 
-                      SSic = SSic/SSt * 100,
-                      SSsc = SSsc/SSt * 100,
-                      SSe = SSe/SSt * 100)
-
-
-
-#####-------------------- PLOTTING -----------------------#####
-
-plot_ly(data = est_2_sep, x = ~date, y = ~yhat, type = "scatter", mode = "lines", name = "separate lines model") %>% 
-  add_trace(data = est_2_single, x = ~date, y = ~yhat, type = "scatter", mode = "lines", name = "single line model") %>%
-  add_trace(data = est_2_sep, x = ~date, y = ~observed, type = "scatter", mode = "markers", name = "observed")
-
-
-ggplot() + 
-  geom_line(aes(x = est_2_sep$date, y = est_2_sep$yhat), col = "navy")
-
-####-------------- without wtd and swc ---------####
-
-model_3_sep <- lm(co2gC ~ (Ta + H) * period, data = data_nGF2)
-sum_3_sep <- summary(model_3_sep)
-sum_3_sep
-
-
-plot_diagnostics(data_nGF2, model_3_sep)
-shapiro.test(residuals(model_3_sep))
-
-model_3 <- lm(co2gC ~ (Ta + H), data = data_nGF2)
-anova(model_3, model_3_sep)
-
-```
-
-
-```{r codes}
-
-
-
-# variable selection using AIC 
-model.null <- lm(log_co2gC ~ 1, data = data_nGF1) # no x variable, the null model
-model.full <- lm(log_co2gC ~ ., data = data_nGF1) # all x variables
-
-# Start with null model
-model.step <- stepAIC(model.null, 
-                      scope = list(upper = ~TS.5 + RH + PARin + 
-                                     VPD.y + Precip + PA_2M + Ta + wtd + SWC + 
-                                      LE + H + ustar + br, 
-                                   lower = ~1),
-                      trace = T)
-# start with full model 
-model.step <- stepAIC(model.full, 
-                      scope = list(upper = ~TS.5 + RH + PARin + 
-                                     VPD.y + Precip + PA_2M + Ta + wtd + SWC + 
-                                      LE + H + ustar + br, 
-                                   lower = ~1),
-                      trace = T)
-
-
-
-data_nGF2$yhat.2 <- fitted(model_2)
-data_nGF2$resid.2 <- residuals(model_2)
-data_nGF2$stdresid.2 <- residuals(model_2)/sum_2$sigma
-
-# Diagnotic plots
-windows()
-par(mfrow=c(2,2),cex=1.1,mai=c(1.1,1.1,0.5,0.4))
-# Fitted line plot. Predicted y versus observed y.
-plot(data_nGF2$yhat.2~data_nGF2$co2gC,xlab="Volume/ha",
-ylab="yhat",main="Predicted vs Actual Volume/ha",
-pch=19)
-abline(a=0,b=1,col="red")
-# Residual plot
-plot(data_nGF2$yhat.2, data_nGF2$resid.2,xlab = "yhat",
-ylab = "Residual",main = "Residual Plot",pch = 19)
-abline(h=0, col="red")
-# Normality plot
-qqnorm(data_nGF2$stdresid.2, ylab = "Std. Residual", pch =19)
-qqline(data_nGF2$stdresid.2, col ="red")
-# Histogram of residuals
-hist(data_nGF2$resid.2,breaks = 5,xlab = "Std. Residual",
-main = "Std. Residuals", col="grey", border="black")
-par(mfrow=c(1,1),cex=1.1,mai=c(1.1,1.1,1.0,1.0))
-# shapiro-wilks for normality
-shapiro.test(data_nGF2$resid.2)
-
-```
